--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -113,3 +113,18 @@
   note = {Accessed: 2-7-2015},
   year      = 2001
 }
+
+@misc{RASPI,
+  author = "Raspberry Pi Foundation",
+  title = "Raspberry Pi 3 Model B",
+  url = "https://www.raspberrypi.org/products/raspberry-pi-3-model-b/",
+  note = {Accessed: 26-9-2016}
+}
+
+@misc{RASPBIAN,
+  author = "Mike Thompson and Peter Green",
+  title = "Raspbian",
+  url = "https://www.raspbian.org/",
+  note = {Accessed: 26-9-2016}
+}
+
