--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -128,3 +128,14 @@
   note = {Accessed: 26-9-2016}
 }
 
+@manual{UBLOXM8T,
+  author = "u-blox",
+  note = {Available at \url{https://www.u-blox.com/sites/default/files/products/documents/NEO-LEA-M8T-FW3_ProductSummary_%28UBX-16000801%29.pdf}},
+  number = "UBX-16000801 - R03",
+  note = {Accessed: 2-7-2015}
+  }
+
+@misc{GCC11,
+  author = "Free Software Foundation, Inc",
+  url = "https://gcc.gnu.org/gcc-4.6/cxx0x_status.html"
+  }
