--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -86,7 +86,7 @@ This countermeasure assumes two receivers with at least 1 km distance from each 
 \subsubsection{Multi-receiver tracking loops}\label{mrtl}
 Building on the idea from \textit{PIA Tracking loops}(\ref{ptl}) one can benefit from the networked nature of the GPS-timed PMU. In a multi-receiver vector tracking loop, many receivers process information in collaboration. A key conclusion of the research made by A. Soloviev \textit{et alia} as referenced by L. Heng \textit{et alia} (2014) showed that acquisition and tracking performance under low signal-to-noise ratio conditions was improved under multi-receiver signal accumulation. Multi-receiver phased arrays also improved the robustness against both jamming (\ref{jam}) and spoofing attacks (\ref{sls},\ref{dls}) by \textit{"Forming beams to satellites and steering nulls in the direction of attacking transmitters"} (L. Heng \textit{et alia} (2014), p.41). In addition to the increase robustness, it increases the ability to detect malfunction (\ref{mf}). A faulty receiver will usually not be consistent with other correctly functioning receivers. As with the countermeasure based on cross-correlating P(Y) code (\ref{ccpc}), this implementation also requires that the GPS receivers are able to output baseband samples. In this implementation, the samples need to be transmitted continuously among the receivers which requires a capable data network such as a typical LAN. \cite{HengChouGao14}  
 
-\subsection{Our Proposal: Spoof proof CSAC SMACC}\label{op}
+\section{Our Proposal: Spoof proof CSAC SMACC}\label{op}
 \begin{wrapfigure}{c}{0.45\textwidth}
   \centering
   \includegraphics[width=0.40\textwidth]{csac.jpg}
@@ -104,16 +104,16 @@ We propose to construct and use what we call a \textit{Spoof proof chip scale at
 
 In the event of spoofing or jamming attack, actions can me made depending on the situation. For example, during a spoofing attack, the SMACC upon detecting an attack, could simply disable the disciplining of the CSAC thus minimizing the damage done to the CSAC's stability caused by the spoofing attack. The SMACC could also do "one better" by steering the CSAC based on a model of the CSAC's oscillator, thus ensuring stability for a longer period of time than by just disabling the disciplining.  
 
-\subsubsection{Choice of chip scale atomic clock}
+\subsection{Choice of chip scale atomic clock}
 We propose to use the Symmetricom SA.45 as the CSAC. This is a CSAC measuring only 16cc with 1 pulse per second (PPS) output and 1 PPS input (for disciplining). The SA.45's strength is it's low power consumption (less than 120mW) and low price \cite{SADS}. The SA.45 also uses a built-in controller which can be communicated with over a RS-232 serial interface. The ability to communicate with the CSAC, issue commands and collect data, is paramount for the feasibility of our proposal. It's worth mentioning that any atomic clock such as Cesium standard or even a Rubidium standard could be used given that they have a means to communicate basic telemetry as used by the SMACC software.
 
-\subsubsection{Choice of SMACC platform}
+\subsection{Choice of SMACC platform}
 We propose to use the Raspberry Pi 3 Model B (RASPI3) in the role as the host running the SMACC software. The RASPI3 is an interesting piece of equipment with an impressive list of specifications. It is a single board computer with a 1.2GHz 64-bit quad-core ARMv8 CPU, 1 GB of RAM, built in 802.11n Wireless LAN and four USB ports (\cite{RASPI}) (just to mention some). As with the Symmetricom SA.45, the RASPI3 is very affordable and retailed at about 35 USD when this report was written. We also propose to use Raspbian (\cite{RASPBIAN}), a Debian derived flavor of Linux optimized for the Raspberry Pi as the operating system. 
 
-\subsubsection{Choice of GPS receiver}
-We propose to use at least two GPS receivers. Both of the receivers should simply collect data and feed it to the SMACC but one of them should also doubles as a 1 PPS disciplining source for the CSAC. We plan to simply use the readily available NMEA data collected from the GPS receivers to feed to SMACC, but in the future, it might be beneficial to collect and process raw data as well. This means that popular and common GPS receivers like the U-Blox NEO-M6/7/8 should be more than good enough.
+\subsection{Choice of GNSS receiver}
+We propose to use at least two GPS receivers. Both of the receivers should simply collect data and feed it to the SMACC but one of them should also doubles as a 1 PPS disciplining source for the CSAC. Considering that need for a stable 1 PPS source, we propose to use the u-blox M8T. This is a relativity affordable GNSS receiver with a temperature compensated crystal oscillator (TCXO), 3 concurrent GNSS reception and an external antenna (\cite{UBLOXM8T}). We plan to simply use the readily available NMEA data collected from the GPS receivers to feed to SMACC, but in the future it might be beneficial to collect and process raw data as well. This does however mean that popular and common GPS receivers like the u-blox NEO-M6/7/8 should be more than good enough. 
 
-\subsubsection{Notes}
+\subsection{Notes}
 It is important to note that this approach doesn't really do anything with the fact that you are being attacked, it simply tries to eliminate the effects of it. In a scenario where you are under attack weeks at a time, you will have to address the fact that you are under attack at some point. It is also important to notes that this countermeasure mostly apply to applications using GPS as a source of time. Having a stable clock during a jamming attack will not help you determine your position once you move (given that you are fully jammed).
 
 \begin{figure}\label{bd}
