Updated the thesis and fixed a bug

--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -111,7 +111,7 @@ We propose to use the Symmetricom SA.45 as the CSAC. This is a CSAC measuring on
 We propose to use the Raspberry Pi 3 Model B (RASPI3) in the role as the host running the SMACC software. The RASPI3 is an interesting piece of equipment with an impressive list of specifications. It is a single board computer with a 1.2GHz 64-bit quad-core ARMv8 CPU, 1 GB of RAM, built in 802.11n Wireless LAN and four USB ports (\cite{RASPI}) (just to mention some). As with the Symmetricom SA.45, the RASPI3 is very affordable and retailed at about 35 USD when this report was written. We also propose to use Raspbian (\cite{RASPBIAN}), a Debian derived flavor of Linux optimized for the Raspberry Pi as the operating system. 
 
 \subsection{Choice of GNSS receiver}
-We propose to use at least two GPS receivers. Both of the receivers should simply collect data and feed it to the SMACC but one of them should also doubles as a 1 PPS disciplining source for the CSAC. Considering that need for a stable 1 PPS source, we propose to use the u-blox M8T. This is a relativity affordable GNSS receiver with a temperature compensated crystal oscillator (TCXO), 3 concurrent GNSS reception and an external antenna (\cite{UBLOXM8T}). We plan to simply use the readily available NMEA data collected from the GPS receivers to feed to SMACC, but in the future it might be beneficial to collect and process raw data as well. This does however mean that popular and common GPS receivers like the u-blox NEO-M6/7/8 should be more than good enough. 
+We propose to use at least two GPS receivers. Both of the receivers should simply collect data and feed it to the SMACC but one of them should also double as a 1 PPS disciplining source for the CSAC. Considering that need for a stable 1 PPS source, we propose to use the u-blox M8T. This is a relativity affordable GNSS receiver with a temperature compensated crystal oscillator (TCXO), 3 concurrent GNSS reception and an external antenna (\cite{UBLOXM8T}). We plan to simply use the readily available NMEA data collected from the GPS receivers to feed to SMACC, but in the future it might be beneficial to collect and process raw data as well. This does however mean that popular and common GPS receivers like the u-blox NEO-M6/7/8 should be more than good enough. 
 
 \subsection{Notes}
 It is important to note that this approach doesn't really do anything with the fact that you are being attacked, it simply tries to eliminate the effects of it. In a scenario where you are under attack weeks at a time, you will have to address the fact that you are under attack at some point. It is also important to notes that this countermeasure mostly apply to applications using GPS as a source of time. Having a stable clock during a jamming attack will not help you determine your position once you move (given that you are fully jammed).
