--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -130,7 +130,7 @@
 
 @manual{UBLOXM8T,
   author = "u-blox",
-  note = {Available at \url{https://www.u-blox.com/sites/default/files/products/documents/NEO-LEA-M8T-FW3_ProductSummary_%28UBX-16000801%29.pdf}},
+  url = "https://www.u-blox.com/sites/default/files/products/documents/NEO-LEA-M8T-FW3_ProductSummary_%28UBX-16000801%29.pdf",
   number = "UBX-16000801 - R03",
   note = {Accessed: 2-7-2015}
   }
@@ -139,3 +139,25 @@
   author = "Free Software Foundation, Inc",
   url = "https://gcc.gnu.org/gcc-4.6/cxx0x_status.html"
   }
+
+@manual{USBTC,
+  title = "Universal Serial Bus Type-C Connectors and Cable Assemblies Compliance Document",
+  author =  "USB Implementers Forum, Inc",
+  url = "http://www.usb.org/developers/compliance/usbcpd_testing/USB_Type-C_Compliance_Document_rev_1_1.pdf"
+}
+
+@manual{C_RATIONAL,
+  author = "ISO",
+  title = "Rationale for International Standard Programming Languages C",
+  url = "http://www.open-std.org/jtc1/sc22/wg14/www/docs/C99RationaleV5.10.pdf"
+}
+
+@manual(GNU_SOCKETS,
+  author = "GNU/LINUX",
+  title = "Sockets",
+  url = "https://www.gnu.org/software/libc/manual/html_node/Sockets.html"
+}
+
+% Comments:
+% Both C_RATIONAL and GNU_SOCKETS are obviously credited wrong.
+% What is the right way? :/
