--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -91,25 +91,39 @@ Here goes foreword
 % Chapter about the csac and it's connectivity?
 
 \chapter{Method}
-\section{SMACC software programming}
 
-\subsection{Intro}
-% Make sure that this is true!
-\subsection{Choice of language}
-The SMACC software was originally planned to be written in Java since this was my most fluent programming language. Java is great language, it's object oriented, it has a garbage collector and a lot of useful libraries. As development started, it quickly became apparent that some parts of the code would be performance critical and that portability really wasn't that important anyway. The platform was already decided and there was no reason to believe that it would change in the near future. As we all know, premature optimization is the root of all evil. Being reluctant to commit a deadly programming sin, i decided to look at other languages. Since performance was a concern, Python was also quickly dismissed as an option. C++ would probably have been the best choice, but having never written anything in C before, made it sound more exciting and a nice opportunity to learn something new. During the planning phase of SMACC development, raspbian-2015-05-07 was the latest build. It came with GCC 4.6 which only had experimental support for C11(\cite{GCC11}), this meant that C99 was the safest choice. 
+\section{Choice of language}
+The SMACC software was originally planned to be written in Java since this was my most fluent programming language. Java is great language, it's object oriented, it has a garbage collector and a lot of useful libraries. As development started, it quickly became apparent that some parts of the code would be performance critical and that portability really wasn't that important anyway. The platform was already decided and there was no reason to believe that it would change in the near future. As we all know, premature optimization is the root of all evil. Being reluctant to commit a deadly programming sin, i decided to look at other languages. Since performance was a concern, Python was also quickly dismissed as an option. C++ would probably have been the best choice, but having never written anything in C before made it sound more exciting and like a nice opportunity to learn something new. During the planning phase of SMACC development, raspbian-2015-05-07 was the latest build. It came with GCC 4.6.3 which only had experimental support for C11(\cite{GCC11}). With C11 no longer considered an option, C99 was the obvious choice given it's attractive features like:
+\begin{itemize}
+  \item Variable-length arrays
+  \item Single line comments
+  \item snprintf() as standard (\cite{C_RATIONAL})
+\end{itemize}
 
-% Insert graph showing spread in GPS data
-\subsection{Client-server model}
-Originally, the SMACC software was planned to be a simple program running a RASPI with GPS receivers connected to it through the USB ports. After having collected a considerable amount of data (\ref{data_aquisition}) it became obvious that the two GPS receivers probably should be placed at a distance of at least X meter from each other. This also meant that long coaxial cables had to be made. I proposed to instead change the plans for the SMACC software to use a Client-server model where each GNSS receiver had a RASPI attached and could be viewed as a single unit, or "sensor". The RASPI's connected to the GNSS receivers would not do any heavy lifting, but instead work as network card with a completely overkill Linux system attached. This way, a sensor could communicate with the SMACC software, now a "server", over TCP/IP and thus be placed much farther away. This also removed the restrictions on possible number of GNSS receivers as one would eventually run out of USB ports.  
+\section{The Sensor Server/Client model}
+Numerous approaches where considered when planning the implementation of the SMACC software (\ref{da}). The approach that got selected is what I have named the "Sensor Server". The Sensor Server is based on the idea that a GNSS receiver and a computer can be viewed abstractly as a single device, a Sensor. The Sensor runs the sensor client software that communicates with the server. With this approach, a great number of GNSS receivers can be connected to the SMACC using existing infrastructure, communicating over IP. The Sensor Server implements the functionality that was planned for the SMACC to implement (\ref{op}) and then some more.
 
-\subsubsection{The client}
-The sensor\_client software is a simple program that reads from the GNSS receivers and "looks" for lines starting with either \texttt{\$GNRMC} or \texttt{\$GNGGA}. %Continue here
+% Refer to protocol.h at the point when describing the ID process?
+\subsection{The Sensor Client}
+The sensor client software is a simple program written in C99 whose only task is to relay information read from the GNSS receivers. Summed up shortly:
+\begin{itemize}
+  \item Takes two parameters to start, the servers IP and port. If parameters are missing, the program exits.
+  \begin{itemize}
+    \item Example: \texttt{./sensor\_client -p 10000 -i 192.168.1.5}
+  \end{itemize}
+  \item Initializes and loads configuration from configuration file. The configuration file includes path to the GNSS receiver, the sensors ID number and a binary value for whether or not logging of NMEA should be done as well as path to the log file.
+  \item Establishes communication with GNSS receiver, exits if it fails.
+  \item Attempts to establish communication with the server, retries for a configurable amount of times at 1 second intervals. Default value is 10.
+  \item Identifies the client for the server according to protocol.
+  \item Reads from the GNSS receiver, "looks" for lines starting with either \texttt{\$GNRMC} or \texttt{\$GNGGA}. When both lines are found, the data is stored in a buffer.
+  \item Sends the GNSS data to the server according to protocol.
+  \item Repeats.
+\end{itemize}
 
-\subsection{Components}
+\subsection{The Sensor Server }
 
-
-\subsection{Data structures and shared memory}
-Since the server needs to have access to all the data the clients transmit, it uses a shared memory model. Every process that forks out from the server is given access to this memory area. Even the processes themselves have access to each others memory. One might make the point that this voids the idea of processes, and one might be correct (see \ref{discussion}). The shared memory is created using the GNU library's Memory Mapped I/O (MMAP). Although typically used to map files to a region of memory, MMAP can also be used to create an anonymous map which are not connected to file but rather for sharing data between tasks without using files.
+\subsubsection{Data structures and shared memory}
+Since the server needs to have access to all the data the clients transmit, it uses a shared memory model. Every process that forks out from the server is given access to this memory area. Even the processes themselves have access to each others memory. One might make the point that this voids the idea of processes, and one might be correct (see \ref{discussion}). The shared memory is created using the GNU library's Memory Mapped I/O (MMAP). Although typically used to map files to a region of memory, MMAP can also be used to create an anonymous map which is not connected to file but rather for sharing data between tasks without using files.
 
 \begin{lstlisting}
 client_list = mmap(NULL, 
@@ -118,16 +132,16 @@ client_list = mmap(NULL,
                   MAP_SHARED | MAP_ANONYMOUS,
                   -1, 0);
 \end{lstlisting}
-
 The example over shows how shared memory is allocated. The observant reader will notice that there memory is allocated for a finite number of clients. This is unfortunate but necessary: The fork operation creates a completely separate address space for the child process but the child still has a complete copy of parents memory segments. Since the child process is completely separated from the parent, any changes in the shared memory done by the parent will not be "reflected" in the child's memory. In other words, the entire shared memory \textit{has} to be initialized before any fork operations are done. Failing to do so will result in a segmentation fault once a process attempts to access the memory of a younger sibling. In this application however, we always know how many clients are going to connect. Even when in doubt, the maximum number of clients can be grossly overestimated and configured in order to make sure that there is room for more clients.
 
-\subsection{Managing connections}
+\subsubsection{Components}
 
-\subsection{The CSAC}
+
+\subsubsection{The CSAC}
 Write about the CSAC and the serial communication. Perhaps mention the how the communication between the server and the CSAC works?
 
-\subsection{Detection algorithms: Filters}
-\section{Data acquisition}\label{data_aquisition}
+\section{Detection algorithms: Filters}
+\subsection{Data acquisition}\label{data_aquisition}
 In order to create an accurate clock-model of the CSAC, it was necessary to log data from it while it was running in a disciplined mode. In the disciplined mode, the CSAC will correct it's frequency based on either a 1 PPS (Pulse per second) signal or a 10 MHz signal. A similar approach was used in order to collect GPS data. Data from two u-blox M8T was gathered over the same time period as the data gathered from the CSAC. By gathering the data over the same period, it was possible to detect any correlation between the time solved by the GPS receivers and any frequency adjustments done by the CSAC. It also provided valuable data that could be used to tune the spoofing detection algorithms in the CSAC SMACC. The data gathering was done by simple Python scripts (\ref{CL} and \ref{GL}) running on a computer connected to the receivers and the CSAC (\ref{CLS})
 
 \subsubsection{Clock Model}
@@ -156,10 +170,14 @@ Write about the test
 
 \chapter{Results and discussion}\label{discussion}
 
-\subsection{Different approaches}
-What is the point of using processes when they aren't even separated? All the bad with none of the good one might argue. 
+\section{Different approaches}\label{da}
+When planning on how to execute our proposal, these where among the ideas that came up. 
 
-Why even do this in C? Would be faster to do it in Python and rather just have all the Raspberry's store their data in a database and analyze it regularly. 
+\subsubsection{Single computer, many GNSS receivers}
+A single computer is used to run the SMACC software. The SMACC does not include a socket server, but the receivers used to collect data are all connected to to the computer through whatever USB ports available or made available by the use of USB hubs. With this approach, you are not dependent on a network, but it limits the number of GNSS receivers you could connect as the USB specification limits the number possible endpoints to an absolute 127(\cite[pp. 3]{USBTC}) because of addressing. This does not mean that 127 devices can be connected, a single device might use more than one endpoint. It's also worth mentioning that a USB hub might "reserve" multiple endpoints. Depending on the GNSS receivers and how they are made, this number might be reduced even further by the power usage of the connected devices. Depending on how far each GNSS receiver is distanced from the SMACC, a signal amplifier might be necessary to compensate for the signal attenuation. In some cases where a network is absent, this might be only option.
+
+\subsubsection{Store in database and analyze}
+With this approach, the idea of a GNSS receiver and RASPI as a single "sensor" unit is the same as with Client-server approach. The difference is that it with this approach, each sensor stores the collected data in a database. The SMACC software monitors the clock directly as with the Client-server approach, but the data in the database is routinely queried and analyzed. The strength with this approach is that data is easily stored, shared and maintained by a single entity. The complexity of the client software would be the same as with Client-server approach, but the SMACC software could be implemented with less complexity as no Client-server architecture or shared memory schemes would be necessary. During planning, this approach seemed promising but was rejected because it was thought that it might not be time-sensitive enough. It was also some doubt concerning whether or not the ability to store data to a database actually was important. Once the different filters and algorithms was in place, it turned that the database functionality would have been nice, but not of any real importance for the SMACC to perform it's tasks, and would have been overkill anyway.
 
 \chapter{Conclusion}
 
