--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -8,5 +8,7 @@
 	\lstinputlisting[language=Python]{./source_files/gps_logger.py}	
 \section{Logger setup schematic}\label{CLS}
 	 \includegraphics[scale=0.5]{csac_logger.pdf}
-	
+\section{Testing setup schematic}\label{CLS}
+	 \includegraphics[scale=0.5]{measure_setup.pdf}
+
 \end{appendices}
