--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -152,10 +152,16 @@
   url = "http://www.open-std.org/jtc1/sc22/wg14/www/docs/C99RationaleV5.10.pdf"
 }
 
-@manual(GNU_SOCKETS,
+@manual{GNU_SOCKETS,
   author = "GNU/LINUX",
   title = "Sockets",
   url = "https://www.gnu.org/software/libc/manual/html_node/Sockets.html"
+}
+
+@manual{CSAC_USERGUIDE,
+  author = "Microsemi Corporation",
+  url = "http://www.microsemi.com/document-portal/doc_view/133467-sa-45s-chip-scale-atomic-clock-user",
+  title = "SA.45s Chip-Scale Atomic Clock 098-00055-000 User Guide"
 }
 
 % Comments:
