Added even more to the appendix and styled some code

--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -7,65 +7,82 @@
 \section{GPS Logger source code}\label{GL}
 	\lstinputlisting[language=Python]{./source_files/gps_logger.py}	
 \chapter{Sensor server software}
+\section{Client}
+\subsection{sensor\_client.c}
+	\ccode{../server/sensor_client.c}
+\subsection{sensor\_client.h}
+	\ccode{../server/sensor_client.h}
+
+\subsection{client\_config.ini}
+	\ccode{../server/client_config.ini}
+
 \section{Server}
 \subsection{sensor\_server.c}
-	\lstinputlisting{../server/sensor_server.c}
+	\ccode{../server/sensor_server.c}
 \subsection{sensor\_server.h}
-	\lstinputlisting{../server/sensor_server.h}
+	\ccode{../server/sensor_server.h}
+\subsection{config.ini}
+	\ccode{../server/config.ini}
 
 \subsection{sensor\_server\_commons.h}
-	\lstinputlisting{../server/sensor_server_commons.h}
+	\ccode{../server/sensor_server_commons.h}
 
 \subsection{session.c}
-	\lstinputlisting{../server/session.c}
+	\ccode{../server/session.c}
 \subsection{session.h}
-	\lstinputlisting{../server/session.h}
+	\ccode{../server/session.h}
 
 \subsection{actions.c}
-	\lstinputlisting{../server/actions.c}
+	\ccode{../server/actions.c}
 \subsection{actions.h}
-	\lstinputlisting{../server/actions.h}
+	\ccode{../server/actions.h}
 
 \subsection{utils.c}
-	\lstinputlisting{../server/utils.c}
+	\ccode{../server/utils.c}
 \subsection{utils.h}
-	\lstinputlisting{../server/utils.h}
+	\ccode{../server/utils.h}
 
 \subsection{net.c}
-	\lstinputlisting{../server/net.c}
+	\ccode{../server/net.c}
 \subsection{net.h}
-	\lstinputlisting{../server/net.h}
+	\ccode{../server/net.h}
 
 \subsection{csac\_filter.c}
-	\lstinputlisting{../server/csac_filter.c}
+	\ccode{../server/csac_filter.c}
 \subsection{csac\_filter.h}
-	\lstinputlisting{../server/csac_filter.h}
+	\ccode{../server/csac_filter.h}
+\subsection{cfilter\_config.ini}
+	\ccode{../server/cfilter_config.ini}
 
 \subsection{filters.c}
-	\lstinputlisting{../server/filters.c}
+	\ccode{../server/filters.c}
 \subsection{filters.h}
-	\lstinputlisting{../server/filters.h}
+	\ccode{../server/filters.h}
 
 \subsection{net.c}
-	\lstinputlisting{../server/net.c}
+	\ccode{../server/net.c}
 \subsection{net.h}
-	\lstinputlisting{../server/net.h}
+	\ccode{../server/net.h}
+
+\subsection{gps\_serial.c}
+	\ccode{../server/gps_serial.c}
+\subsection{serial.h}
+	\ccode{../server/serial.h}
 
 \subsection{colors.h}
-	\lstinputlisting{../server/colors.h}
+	\ccode{../server/colors.h}
 
 \subsection{config.h}
-	\lstinputlisting{../server/config.h}
+	\ccode{../server/config.h}
 
 \subsection{nmea.h}
-	\lstinputlisting{../server/nmea.h}
+	\ccode{../server/nmea.h}
 
 \subsection{protocol.h}
-	\lstinputlisting{../server/protocol.h}
+	\ccode{../server/protocol.h}
 
-
-
-
+\subsection{makefile}
+	\makecode{../server/makefile}
 
 
 
